outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:13:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\include/IfxEgtm_Pwm.h:118:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  118 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:30:37: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P20'?
   30 | #define LED                       (&MODULE_P03), 9u
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:63:23: note: in expansion of macro 'LED'
   63 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:30:37: note: each undeclared identifier is reported only once for each function it appears in
   30 | #define LED                       (&MODULE_P03), 9u
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:63:23: note: in expansion of macro 'LED'
   63 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:30:37: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P20'?
   30 | #define LED                       (&MODULE_P03), 9u
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\src\egtm_atom_3_phase_inverter_pwm.c:200:30: note: in expansion of macro 'LED'
  200 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:4:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_f_gk4sro\include/IfxEgtm_Pwm.h:118:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  118 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
